--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,6 +5,9 @@
 @import "./components/header";
 @import "./components/home";
 @import "./components/themelang";
+@import "./components/works";
 
 @import "./pages/aboutMe";
+@import "./pages/experience";
 @import "./pages/intro";
+@import "./pages/knowledges";
