new projects page and some adjustments in experience page

--- a/src/style/base/_utilities.scss
+++ b/src/style/base/_utilities.scss
@@ -231,3 +231,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.hover-dark {
+  &:hover {
+    color: var(--light-blue);
+  }
+}
+
+.hover-light {
+  &:hover {
+    color: var(--light-red);
+  }
+}
