added download cv option

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -51,7 +51,7 @@
         margin-bottom: 4rem;
       }
 
-      & p:last-child {
+      &--tip {
         text-transform: uppercase;
         text-decoration-line: underline;
       }
