--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,7 @@
 @import "./base/utilities";
 
 @import "./components/dropdownBTN";
+@import "./components/footer";
 @import "./components/header";
 @import "./components/home";
 @import "./components/themelang";
