--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -25,6 +25,7 @@
   &_component {
     padding: 8rem;
     transition: all 1.2s cubic-bezier(0, 1.06, 1, 0.41);
+    margin-bottom: 2rem;
 
     &--text-left {
       position: absolute;
