--- a/src/style/pages/_projects.scss
+++ b/src/style/pages/_projects.scss
@@ -11,6 +11,7 @@
     text-align: center;
     font-size: 1.5rem;
     letter-spacing: 0.3rem;
+    margin-bottom: 2rem;
 
     & a {
       display: inline-block;
