--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -41,5 +41,36 @@
       left: 0;
       text-align: center;
     }
+
+    &-image {
+      position: absolute;
+      height: 25rem;
+      width: 50rem;
+      transition: all 2s linear;
+
+      @include border-radius-basic();
+
+      &--img {
+        height: 100%;
+        width: 100%;
+        transition: all 2s linear;
+        @include border-radius-basic();
+      }
+
+      &--right {
+        right: 20%;
+      }
+
+      &--left {
+        left: 20%;
+      }
+
+      &--border-blue {
+        @include border(--light-blue);
+      }
+      &--border-red {
+        @include border(--light-red);
+      }
+    }
   }
 }
