--- a/src/style/pages/_knowledges.scss
+++ b/src/style/pages/_knowledges.scss
@@ -15,8 +15,9 @@
     height: 12rem;
     width: 80%;
     margin-top: 1rem;
-    border-radius: 20px;
     display: flex;
+
+    @include border-radius-basic();
   }
 
   &-border--blue {
