--- a/src/style/pages/_knowledges.scss
+++ b/src/style/pages/_knowledges.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
 
-  grid-template-rows: repeat(3, 42rem) 16rem;
+  grid-template-rows: repeat(3, 46rem) 16rem;
 
   font-size: 1.5rem;
 
@@ -12,12 +12,24 @@
   }
 
   &-images {
-    height: 12rem;
-    width: 80%;
+    @include border-radius-basic();
+    height: 16rem;
     margin-top: 1rem;
     display: flex;
+    justify-content: center;
+    padding: 1rem;
 
-    @include border-radius-basic();
+    &--advanced {
+      width: calc(100% / 4);
+    }
+
+    &--intermediary {
+      width: calc(100% / 4);
+    }
+
+    &--basic {
+      justify-self: center;
+    }
   }
 
   &-border--blue {
