--- a/src/style/pages/_projects.scss
+++ b/src/style/pages/_projects.scss
@@ -27,6 +27,7 @@
       @include border-radius-basic();
 
       width: 80%;
+      height: 100%;
       margin: auto;
       &-border--blue {
         @include border(--light-blue);
@@ -34,9 +35,16 @@
       &-border--red {
         @include border(--light-red);
       }
+
+      &--img {
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+      }
     }
 
     &-description {
+      margin-top: 2rem;
       width: 60vw;
     }
 
