--- a/src/style/components/_themelang.scss
+++ b/src/style/components/_themelang.scss
@@ -1,6 +1,9 @@
 .theme-lang {
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 30rem 10rem 30rem;
   justify-content: space-between;
+  align-items: center;
   padding: 0 8rem;
   height: 12rem;
   position: relative;
@@ -11,5 +14,10 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+
+    &--home {
+      align-self: center;
+      width: 10rem;
+    }
   }
 }
