new light-mode color

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -8,6 +8,8 @@
   --light-red: rgb(223, 43, 43);
   --light-red-transparent: rgba(223, 43, 43, 0.4);
 
+  --light-mode--second-color: #e9e4f0;
+
   --basic-white: white;
   --basic-black: black;
 }
