--- a/src/style/base/_utilities.scss
+++ b/src/style/base/_utilities.scss
@@ -145,8 +145,12 @@
 }
 
 .light-mode {
-  background-image: linear-gradient(180deg, rgb(172, 218, 236), white);
-  background-color: rgb(172, 218, 236);
+  background-image: linear-gradient(
+    180deg,
+    var(--light-mode--second-color),
+    var(--basic-white),
+    var(--light-mode--second-color)
+  );
 
   color: var(--dark-gray);
 
@@ -171,15 +175,6 @@
     transform: rotate(360deg) translate(-150px) rotate(-360deg);
   }
 }
-
-/* @keyframes rotate-2 {
-  0% {
-    transform: rotate(0deg) translate(-180px) rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg) translate(-180px) rotate(-360deg);
-  }
-} */
 
 .left {
   grid-column: 1 / 5;
