--- a/src/style/components/_themelang.scss
+++ b/src/style/components/_themelang.scss
@@ -4,8 +4,8 @@
   grid-template-columns: 30rem 10rem 30rem;
   justify-content: space-between;
   align-items: center;
-  padding: 0 8rem;
   height: 12rem;
+  padding: 0 8rem;
   position: relative;
 
   @include show-border();
@@ -14,6 +14,10 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+
+    &--btn {
+      width: 20rem;
+    }
 
     &--home {
       width: 10rem;
