--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,6 +1,7 @@
 $largest-size: 103.125em; //1650px
 $large-size: 75em; //1200px
 $big-size: 56.25em; //900px
+$medium-size: 50em; //800px
 
 :root {
   --dark-gray: rgb(38, 38, 38);
