--- a/src/style/base/_utilities.scss
+++ b/src/style/base/_utilities.scss
@@ -272,3 +272,9 @@
 .box-shadow--red {
   box-shadow: 0 0 40px var(--light-red);
 }
+
+.no-show {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+}
