--- a/src/style/components/_themelang.scss
+++ b/src/style/components/_themelang.scss
@@ -8,6 +8,19 @@
   padding: 0 8rem;
   position: relative;
 
+  @media only screen and (max-width: $medium-size) {
+    height: 100dvh;
+    grid-template-columns: 30rem;
+    grid-template-rows: repeat(4, 1fr);
+    grid-auto-flow: row;
+    justify-content: start;
+    align-items: center;
+    padding: 0 4rem;
+    width: fit-content;
+    z-index: 1000;
+    position: fixed;
+  }
+
   @include show-border();
 
   &-div {
@@ -15,12 +28,51 @@
     align-items: center;
     gap: 2rem;
 
+    @media only screen and (max-width: $medium-size) {
+      justify-content: center;
+    }
+
     &--btn {
       width: 20rem;
+      z-index: 1000000000000;
     }
 
     &--home {
       width: 10rem;
+      z-index: 1000000000000;
+    }
+  }
+
+  &_menu {
+    position: fixed;
+    top: 2%;
+    left: 2%;
+    border-radius: 50px;
+    padding: 1rem;
+    z-index: 1000;
+    width: fit-content;
+
+    &-options {
+      height: 100dvh;
+      width: 40rem;
+      position: fixed;
+      z-index: 100000;
+      opacity: 0.9;
+      display: grid;
+      grid-auto-flow: row;
+      grid-template-rows: repeat(5, 1fr);
+      grid-template-columns: 1fr;
+      padding: 4rem;
+      box-sizing: border-box;
+      justify-content: center;
+      align-items: center;
+
+      &--div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+      }
     }
   }
 }
