--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -4,6 +4,9 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
+  @media only screen and (max-width: $medium-size) {
+    padding: 2rem 4rem;
+  }
   font-size: 1.5rem;
   text-align: center;
 
