--- a/src/style/components/_works.scss
+++ b/src/style/components/_works.scss
@@ -3,7 +3,15 @@
   justify-content: center;
   align-items: center;
 
-  grid-template-rows: 10rem 8rem;
+  grid-template-rows: 12rem 10rem;
+
+  @media only screen and (max-width: $medium-size) {
+    grid-template-rows: 18rem 28rem;
+  }
+
+  @media only screen and (max-width: $small-size) {
+    grid-template-rows: 22rem 34rem;
+  }
 
   &-title {
     & p {
@@ -13,5 +21,11 @@
 
   &-description {
     padding: 0 16rem;
+    @media only screen and (max-width: $medium-size) {
+      padding: 0 4rem;
+    }
+    @media only screen and (max-width: $small-size) {
+      padding: 0 2rem;
+    }
   }
 }
