--- a/src/style/pages/_projects.scss
+++ b/src/style/pages/_projects.scss
@@ -14,6 +14,14 @@
       grid-template-columns: 1fr;
     }
 
+    @media only screen and (max-width: $small-size) {
+      grid-template-rows: 16rem 18rem 32rem 28rem;
+    }
+
+    @media only screen and (max-width: $minimum-size) {
+      grid-template-rows: 16rem 18rem 40rem 30rem;
+    }
+
     text-align: center;
     font-size: 1.5rem;
     letter-spacing: 0.3rem;
@@ -32,7 +40,18 @@
     &-image {
       @include border-radius-basic();
 
-      width: 80%;
+      width: 80rem;
+
+      @media only screen and (max-width: $big-size) {
+        width: 60rem;
+      }
+      @media only screen and (max-width: $small-size) {
+        width: 40rem;
+      }
+      @media only screen and (max-width: $minimum-size) {
+        width: 30rem;
+      }
+
       height: 100%;
       margin: auto;
       &-border--blue {
@@ -50,8 +69,8 @@
     }
 
     &-description {
-      margin-top: 2rem;
-      width: 60dvw;
+      padding: 0 4rem;
+      margin-top: 4rem;
     }
 
     &-social {
