--- a/src/style/base/_utilities.scss
+++ b/src/style/base/_utilities.scss
@@ -113,6 +113,7 @@
 
 .icon {
   font-size: 3rem;
+  pointer-events: none;
 
   &-moon {
     cursor: auto;
@@ -277,4 +278,11 @@
   display: none;
   visibility: hidden;
   opacity: 0;
+}
+
+.overlay {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
 }
