--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -18,7 +18,7 @@
       grid-template-rows: 1fr 2fr;
     }
 
-    // I founded the rotate animation in some website (sad I have no clue who made it D=), I just changed some lines and added other 2 spheres to rotate together
+    // I found the rotate animation in some website (sad I have no clue who made it D=), I just changed some lines and added other 2 spheres to rotate together
     &-photo {
       width: 30rem;
       height: 30rem;
