--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,4 +11,5 @@
 @import "./pages/experience";
 @import "./pages/intro";
 @import "./pages/knowledges";
+@import "./pages/notFound";
 @import "./pages/projects";
